奇数个 1 的子串的总长度.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,6 +148,7 @@ nav:
     - B. Battling with Numbers: 补题/B. Battling with Numbers.md
     - E. Kolya and Movie Theatre: 补题/E. Kolya and Movie Theatre.md
     - 奇数个 1 的子串个数: 补题/奇数个 1 的子串个数.md
+    - 奇数个 1 的子串个数: 补题/奇数个 1 的子串个数.md
 
   - MySQL:
     - 入门命令: MySQL/入门命令.md
