--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -210,6 +210,7 @@ nav:
     - Shell: Linux/Shell.md
     - ssh: Linux/ssh.md
     - 创建新用户: Linux/创建新用户.md
+    - linux 实验: Linux/linux 实验.md
     
   - CSS 笔记:
     - 标签选择器: CSS 笔记/标签选择器.md
